Add pytest to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+# Production dependencies
 chromadb~=0.4.22
 python-dotenv~=1.0.1
 PyPDF2~=3.0.1
 nltk~=3.8.1
 sumy~=0.11.0
 sentence_transformers
+
+# Development dependencies (including testing)
+pytest
