--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-dotenv~=1.0.1
 PyPDF2~=3.0.1
 nltk~=3.8.1
 sumy~=0.11.0
-sentence_transformers
+sentence_transformers~=2.3.1
 
 # Development dependencies (including testing)
-pytest
+pytest~=8.0.0
