--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,13 +18,8 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
     - name: Build Docker image
-      run: docker build -t pdf_searcher .
+      run: docker build -t kian79/pdf_searcher:latest .
 
   test:
     runs-on: ubuntu-latest
@@ -46,7 +41,7 @@ jobs:
     - name: Run tests
       run: pytest
 
-  deploy:
+  release:
     runs-on: ubuntu-latest
 
     needs: test
