--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest pdf_processing/
+      run: pytest
 
   release:
     runs-on: ubuntu-latest
